--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "goose-track-team-4",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ali-sia.github.io/goose-track-team-4/",
+  "homepage": "https://innashtondenko.github.io/goose-track-team-4/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.3",
